RESOLVED FIXED 157615
[css-grid] Incorrect parsing when using just 'span" as grid-line value
https://bugs.webkit.org/show_bug.cgi?id=157615
Summary [css-grid] Incorrect parsing when using just 'span" as grid-line value
Manuel Rego Casasnovas
Reported 2016-05-12 00:37:53 PDT
If you use "span" alone to reference a grid line it should be considered an invalid declaration (e.g. "grid-column: span;"). https://drafts.csswg.org/css-grid/#typedef-grid-row-start-grid-line This is a port from a Blink patch: https://codereview.chromium.org/1970573004/
Attachments
Patch (18.67 KB, patch)
2016-05-12 00:54 PDT, Manuel Rego Casasnovas
no flags
Manuel Rego Casasnovas
Comment 1 2016-05-12 00:54:37 PDT
WebKit Commit Bot
Comment 2 2016-05-12 02:11:23 PDT
Comment on attachment 278708 [details] Patch Clearing flags on attachment: 278708 Committed r200755: <http://trac.webkit.org/changeset/200755>
WebKit Commit Bot
Comment 3 2016-05-12 02:11:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.