[css-grid] Incorrect parsing when using just 'span" as grid-line value https://bugs.webkit.org/show_bug.cgi?id=157615

Reviewed by Sergio Villar Senin.

Source/WebCore:

The spec is pretty clear about this:
https://drafts.csswg.org/css-grid/#typedef-grid-row-start-grid-line

The possible options when using "span" to reference a grid line are:
  [ span && [ <integer> || <custom-ident> ] ]

Thus, "span" keyword alone produces an invalid declaration.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseGridPosition):

LayoutTests:

Add new test case in grid-item-column-row-get-set.html.

Updated other tests that were using "span" alone, with 2 approaches:
- In some of them changing "span" by "span 1" making it valid.
- In other changing the expected result to "auto", as it's invalid now.

* fast/css-grid-layout/grid-item-area-get-set.html:
* fast/css-grid-layout/grid-item-bad-named-area-auto-placement.html:
* fast/css-grid-layout/grid-item-column-row-get-set-expected.txt:
* fast/css-grid-layout/grid-item-column-row-get-set.html:
* fast/css-grid-layout/grid-item-end-after-get-set-expected.txt:
* fast/css-grid-layout/grid-item-end-after-get-set.html:
* fast/css-grid-layout/grid-item-negative-position-resolution.html:
* fast/css-grid-layout/grid-item-start-before-get-set-expected.txt:
* fast/css-grid-layout/grid-item-start-before-get-set.html:


Canonical link: https://commits.webkit.org/175749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200755 268f45cc-cd09-0410-ab3c-d52691b4dbfc